--- a/Frontend/src/inf2b/algobench/ui/NewTaskDialog.form
+++ b/Frontend/src/inf2b/algobench/ui/NewTaskDialog.form
@@ -1659,8 +1659,8 @@
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="jLabel67" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                                          <Component id="jComboBoxRangeTo" pref="104" max="32767" attributes="0"/>
-                                          <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                                          <Component id="jComboBoxRangeTo" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="jLabelErrorRange" max="32767" attributes="0"/>
                                   </Group>
